Toolbar design fix on smaller dimensions.

--- a/src/app/components/ToDo/todo.component.css
+++ b/src/app/components/ToDo/todo.component.css
@@ -354,4 +354,9 @@ h4 {
     .todo-item-image {
         height: 130px;
     }
+
+    .global-container{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
